--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </a>
          </li>
           <li class="lots_card-list-item">
-            <a href="#0" class="card_link">
+            <a href="#0" class="card_link"></a>
                <articl class="card card_type_book">
                  <div class="overlay"></div>
                                  <h3 class="card__title">
@@ -115,10 +115,10 @@
                   Джеймса Джойса?
                 </p>
               </articl>
-            </a>
+            
          </li>
           <li class="lots_card-list-item">
-            <a href="#0" class="card_link">
+            <a href="#0" class="card_link"></a>
                <articl class="card card_type_pictur">
                  <div class="overlay"></div>
                 <h3 class="card__title">
@@ -131,7 +131,7 @@
                   что это — одна из революционных работ Кандинского?
                 </p>
               </articl>
-            </a>
+            
          </li>
         </ul>
 
