--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </article>
             </a>
          </li>
-          <li class="lots_card-list-item">
+          <div class="lots_card-list-item">
             <a href="#0" class="card_link"></a>
                <articl class="card card_type_book">
                  <div class="overlay"></div>
@@ -116,8 +116,8 @@
                 </p>
               </articl>
             
-         </li>
-          <li class="lots_card-list-item">
+         </div>
+          <div class="lots_card-list-item">
             <a href="#0" class="card_link"></a>
                <articl class="card card_type_pictur">
                  <div class="overlay"></div>
@@ -132,7 +132,7 @@
                 </p>
               </articl>
             
-         </li>
+         </div>
         </ul>
 
         <a class="lots_look-more-link" href="#0">посмотреть больше</a>
