--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                 </article>
             </a>
          </li>
-          <div class="lots_card-list-item">
+          <li class="lots_card-list-item">
             <a href="#0" class="card_link"></a>
-               <articl class="card card_type_book">
+               <article class="card card_type_book">
                  <div class="overlay"></div>
                                  <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
@@ -114,12 +114,12 @@
                   эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
                   Джеймса Джойса?
                 </p>
-              </articl>
+              </article>
             
-         </div>
-          <div class="lots_card-list-item">
+         </li>
+          <li class="lots_card-list-item">
             <a href="#0" class="card_link"></a>
-               <articl class="card card_type_pictur">
+               <article class="card card_type_pictur">
                  <div class="overlay"></div>
                 <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
@@ -130,9 +130,9 @@
                   котиков... Сколько бы вы на такое поставили, если бы не знали,
                   что это — одна из революционных работ Кандинского?
                 </p>
-              </articl>
+              </article>
             
-         </div>
+         </li>
         </ul>
 
         <a class="lots_look-more-link" href="#0">посмотреть больше</a>
