--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="header_address-links">
             <ul class="header_links">
               <li class="header_link">
-                <a href="tel:+99995555555">+9(999)555-55-55</a>
+                <a href="tel:+99995555555">+9 999 555 5555</a>
               </li>
               <li class="header_link">
                 <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
@@ -173,7 +173,7 @@
           <ul class="footer_menu-list-item_no-bullet">
             <li class="footer_menu-item">
               <a class="footer_menu-link" href="tel:+99995555555"
-                >+9(999)555-55-55</a
+                >+9 999 555 5555</a
               >
             </li>
             <li class="footer_menu-link">
