--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </div>
         <div class="about_column">
           
-            <h4 class="about_title">ОБ АУКЦИОНЕ</h4>
+            <h4 class="about_title">Об аукционе</h4>
           
           <div class="about_text">
             <p>
@@ -202,12 +202,18 @@
         <ul class="footer_social-list-item">
           <li>
             <a class="footer_social-link" href="#0">
-              <img class="footer_social-icon" src="./images/yt.svg" alt="" />
+              <img 
+                class="footer_social-icon" 
+                src="./images/yt.svg" 
+                alt="" />
             </a>
           </li>
           <li>
             <a class="footer_social-link" href="#0">
-              <img class="footer_social-icon" src="./images/vk.svg" alt="" />
+              <img 
+                class="footer_social-icon" 
+                src="./images/vk.svg" 
+                alt="" />
             </a>
           </li>
           <li>
