--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
       </a>
 
       <!--       <div class="header_menu-address"> -->
-      <address class="address-links header_link header_link-active">
-        <a class="header_link" href="tel:+99995555555">+9 999 555 5555</a>
+      <address class="address-links_1 address_link_1 address_text">
+        <a class="address_link_1" href="tel:+99995555555">+9 999 555 5555</a>
 
-        <a class="header_link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a class="address_link_1" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
 
-        <p class="header_link-active">наб. Принсенграхт 263- 265, Амстердам</p>
+        <p class="address_text">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
     <main class="content">
@@ -64,7 +64,8 @@
           <p class="cover_description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button">Сделать ставку</button>
+          <button class=" bet-button">
+            <span class="button_text">Сделать ставку</span></button>
         </div>
       </section>
       <section class="lots">
@@ -119,9 +120,12 @@
               </p>
             </article>
           </li>
+          
         </ul>
-
-        <a class="lots_look-more-link" href="#0">посмотреть больше</a>
+        <div class="lots_look-more-link">
+          <a  href="#0">посмотреть больше</a>
+        </div>
+        
       </section>
       <section class="about">
         <div class="about_logo">
@@ -135,14 +139,14 @@
           <h2 class="about_title">Об аукционе</h2>
 
           <div class="about_text">
-            <p>
+            <p class="word-spacing_1">
               Здесь вы не встретите очередное пафосное собрание невероятно
               дорогого антиквариата. Наши лоты вообще не должны были попасть ни
               на один аукцион. Потому что кому нужен дневник девочки-подростка
               или картина, которую может нарисовать даже ребёнок? Кому нужны все
               эти странные вещи, созданные любителями?
             </p>
-            <p>
+            <p class="word-spacing_2">
               Слишком сложные или, наоборот, слишком простые. Опережающие своё
               время. В пух и прах растерзанные критиками. Непринятые и
               непонятые. Когда-то они казались просто неудачными. Но, несмотря
@@ -157,12 +161,12 @@
     </main>
 
     <footer class="footer">
-      <address class="footer_address-links footer-link footer-link_active">
-        <a class="footer-link" href="tel:+99995555555">+9 999 555 5555</a>
+      <address class="address-links_1 address_link_2 address_text">
+        <a class="address_link_2" href="tel:+99995555555">+9 999 555 5555</a>
 
-        <a class="footer-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a class="address_link_2" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
 
-        <p class="footer-link_active">наб. Принсенграхт 263- 265, Амстердам</p>
+        <p class="address_text">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
 
       <nav class="footer_menu">
