--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <ul class="lots_card_list">
           <li class="lots_card-list-item">
             <a href="#0" class="card_link">
-              <article class="card ">
+              <article class="card card_type_film ">
                 <div class="overlay"></div>
                 <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
@@ -89,7 +89,7 @@
           </li>
           <li class="lots_card-list-item">
             <a href="#0" class="card_link"></a>
-            <article class="card ">
+            <article class="card card_type_book">
               <div class="overlay"></div>
               <h3 class="card__title">
                 Книга, где описан один скучный день из жизни рекламного агента
@@ -107,7 +107,7 @@
           </li>
           <li class="lots_card-list-item">
             <a href="#0" class="card_link"></a>
-            <article class="card ">
+            <article class="card card_type_pictur">
               <div class="overlay"></div>
               <h3 class="card__title">
                 Картина, которую повторит даже 5-летний сын маминой подруги
