--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </nav>
 
       <a class="header_logo">
-        <img src="./images/logo-black.svg" alt="Логотип Оно тебе надо" />
+        <img class="logo-black" src="./images/logo-black.svg" alt="Логотип Оно тебе надо" />
       </a>
 
       <!--       <div class="header_menu-address"> -->
