--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
       <nav class="header_menu">
         <ul class="header_menu-list">
-          <li class="header_menu-item_no-bullet">
-            <a class="header_menu-link-active">главная</a>
+          <li class="header_menu-item header_menu-item_no-bullet">
+            <a class="header_menu-link">главная</a>
           </li>
           <li class="header_menu-item">
             <a class="header_menu_link" href="#0">посмотреть лоты</a>
@@ -26,14 +26,20 @@
       </nav>
 
       <a class="header_logo">
-        <img class="logo-black" src="./images/logo-black.svg" alt="Логотип Оно тебе надо" />
+        <img
+          class="logo-black"
+          src="./images/logo-black.svg"
+          alt="Логотип Оно тебе надо"
+        />
       </a>
 
       <!--       <div class="header_menu-address"> -->
       <address class="address-links_1 address_link_1 address_text">
         <a class="address_link_1" href="tel:+99995555555">+9 999 555 5555</a>
 
-        <a class="address_link_1" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a class="address_link_1" href="mailto:info@sobaka.ge"
+          >info@sobaka.ge</a
+        >
 
         <p class="address_text">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
@@ -64,8 +70,9 @@
           <p class="cover_description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class=" bet-button">
-            <span class="button_text">Сделать ставку</span></button>
+          <button class="bet-button">
+            <span class="button_text">Сделать ставку</span>
+          </button>
         </div>
       </section>
       <section class="lots">
@@ -74,7 +81,7 @@
         <ul class="lots_card_list">
           <li class="lots_card-list-item">
             <a href="#0" class="card_link">
-              <article class="card card_type_film ">
+              <article class="card card_type_film">
                 <div class="overlay"></div>
                 <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
@@ -120,12 +127,10 @@
               </p>
             </article>
           </li>
-          
         </ul>
         <div class="lots_look-more-link">
-          <a  href="#0">посмотреть больше</a>
+          <a href="#0">посмотреть больше</a>
         </div>
-        
       </section>
       <section class="about">
         <div class="about_logo">
@@ -164,7 +169,9 @@
       <address class="address-links_1 address_link_2 address_text">
         <a class="address_link_2" href="tel:+99995555555">+9 999 555 5555</a>
 
-        <a class="address_link_2" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a class="address_link_2" href="mailto:info@sobaka.ge"
+          >info@sobaka.ge</a
+        >
 
         <p class="address_text">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
@@ -175,20 +182,16 @@
             <a class="footer_menu-link footer_menu-link_active">главная</a>
           </li>
           <li class="footer_menu-item">
-            <a class="footer_menu-link "
-              >посмотреть лоты</a
-            >
+            <a class="footer_menu-link">посмотреть лоты</a>
           </li>
           <li class="footer_menu-item">
-            <a class="footer_menu-link " href="#0"
-              >об аукционе</a
-            >
+            <a class="footer_menu-link" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
-      <nav >
-        <ul class="footer_social-list" >
-          <li class="footer_social-list-item" >
+      <nav>
+        <ul class="footer_social-list">
+          <li class="footer_social-list-item">
             <a class="footer_social-link" href="#0">
               <img
                 class="footer_social-icon"
