--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <nav class="header_menu">
         <ul class="header_menu-list">
           <li class="header_menu-item header_menu-item_no-bullet">
-            <a class="header_menu-link">главная</a>
+            <a class="menu_links menu_link-active" href="#0">главная</a>
           </li>
           <li class="header_menu-item">
-            <a class="header_menu_link" href="#0">посмотреть лоты</a>
+            <a class="menu_links  " href="#0">посмотреть лоты</a>
           </li>
           <li class="header_menu-item">
-            <a class="header_menu_link" href="#0">об аукционе</a>
+            <a class="menu_links  " href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -179,13 +179,13 @@
       <nav class="footer_menu">
         <ul class="footer_menu-list">
           <li class="footer_menu-item">
-            <a class="footer_menu-link footer_menu-link_active">главная</a>
+            <a class="menu_links menu_link-active" href="#0">главная</a>
           </li>
           <li class="footer_menu-item">
-            <a class="footer_menu-link">посмотреть лоты</a>
+            <a class="menu_links">посмотреть лоты</a>
           </li>
           <li class="footer_menu-item">
-            <a class="footer_menu-link" href="#0">об аукционе</a>
+            <a class="menu_links" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
