--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <a class="menu_links menu_link-active" href="#0">главная</a>
           </li>
           <li class="footer_menu-item">
-            <a class="menu_links">посмотреть лоты</a>
+            <a class="menu_links" href="#0">посмотреть лоты</a>
           </li>
           <li class="footer_menu-item">
             <a class="menu_links" href="#0">об аукционе</a>
