--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header_menu">
+      <!-- header navigation-->
+      <nav>
         <ul class="header_menu-list">
           <li class="header_menu-item header_menu-item_no-bullet">
             <a class="menu_links menu_link-active" href="#0">главная</a>
@@ -24,31 +25,29 @@
           </li>
         </ul>
       </nav>
-
-      <a class="header_logo">
+      <!--  logo-black    -->
+      <a>
         <img
           class="logo-black"
           src="./images/logo-black.svg"
           alt="Логотип Оно тебе надо"
         />
       </a>
+      <!-- header address -->
+      <address class="address-links address_link address_text">
+        <a class="address_link" href="tel:+99995555555">+9 999 555 5555</a>
 
-      <!--       <div class="header_menu-address"> -->
-      <address class="address-links_1 address_link_1 address_text">
-        <a class="address_link_1" href="tel:+99995555555">+9 999 555 5555</a>
-
-        <a class="address_link_1" href="mailto:info@sobaka.ge"
-          >info@sobaka.ge</a
-        >
+        <a class="address_link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
 
         <p class="address_text">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
+    <!-- content -->
     <main class="content">
+       <!-- cover -->
       <section class="cover">
         <div class="overlay"></div>
 
-        <!--      -->
         <h1 class="cover-title">
           <span class="aligned-text"
             >О<span class="letter-spacing-extended">НО</span></span
@@ -75,6 +74,7 @@
           </button>
         </div>
       </section>
+       <!-- lots -->
       <section class="lots">
         <h2 class="lots_heading">Лоты</h2>
 
@@ -132,6 +132,7 @@
           <a href="#0">посмотреть больше</a>
         </div>
       </section>
+      <!-- about -->
       <section class="about">
         <div class="about_logo">
           <img
@@ -144,14 +145,14 @@
           <h2 class="about_title">Об аукционе</h2>
 
           <div class="about_text">
-            <p class="word-spacing_1">
+            <p class="about_paragraph">
               Здесь вы не встретите очередное пафосное собрание невероятно
               дорогого антиквариата. Наши лоты вообще не должны были попасть ни
               на один аукцион. Потому что кому нужен дневник девочки-подростка
               или картина, которую может нарисовать даже ребёнок? Кому нужны все
               эти странные вещи, созданные любителями?
             </p>
-            <p class="word-spacing_2">
+            <p class="about_paragraph">
               Слишком сложные или, наоборот, слишком простые. Опережающие своё
               время. В пух и прах растерзанные критиками. Непринятые и
               непонятые. Когда-то они казались просто неудачными. Но, несмотря
@@ -166,17 +167,16 @@
     </main>
 
     <footer class="footer">
-      <address class="address-links_1 address_link_2 address_text">
-        <a class="address_link_2" href="tel:+99995555555">+9 999 555 5555</a>
+      <!-- footer address -->
+      <address class="address-links address__link address_text">
+        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
 
-        <a class="address_link_2" href="mailto:info@sobaka.ge"
-          >info@sobaka.ge</a
-        >
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
 
         <p class="address_text">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
-
-      <nav class="footer_menu">
+      <!-- footer navigation-->
+      <nav>
         <ul class="footer_menu-list">
           <li class="footer_menu-item">
             <a class="menu_links menu_link-active" href="#0">главная</a>
@@ -190,6 +190,7 @@
         </ul>
       </nav>
       <nav>
+         <!-- social-list -->
         <ul class="footer_social-list">
           <li class="footer_social-list-item">
             <a class="footer_social-link" href="#0">
